<resources>
    <string name="FCM_PREF">FCM_PREF</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="FCM_TOKEN">FCM_TOKEN</string>
    <string name="app_name">Agrawal Fedration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_Logout">LogOut</string>
    <string name="faarrowleft">&#xf060;</string>
    <string name="hello_blank_fragment">first fragment</string>
    <string name="Comapany_Name">Company Name</string>
    <string name="Tag_Line">Tag Line</string>
    <string name="Email">Email</string>
    <string name="dot">:</string>
    <string name="Mobile">Mobile</string>
    <string name="Contact_Code">Contact Code</string>
    <string name="Contact_Number">Landline</string>
    <string name="Address_Line_1">Address 1</string>
    <string name="Country_1">Country</string>
    <string name="State_1">State </string>
    <string name="City_1">City </string>
    <string name="Address_Line_2">Address 2</string>
    <string name="Country_2">Country 2</string>
    <string name="State_2">State 2</string>
    <string name="City_2">City 2</string>
    <string name="Description">Description</string>
    <string name="Long_Description">Long Description</string>
    <string name="Year_Established">Year Established</string>
    <string name="Websitee">Website</string>
    <string name="Certification">Certification</string>
    <string name="Licenses">Licenses</string>
    <string name="Payment_Method">Payment Method</string>
    <string name="Category">Category</string>
    <string name="Subcategory">Subcategory</string>
    <string name="Locale">Locale</string>
    <string-array name="Service_Area">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Delhi</item>
    </string-array>
    <string name="Working_days">Working days</string>
    <string name="Hours_of_Operation">Hours of Operation</string>
    <string name="Logo">Logo</string>
    <string name="Specialities">Specialities</string>
    <string name="Business_Type">Business Type</string>
    <string name="Landline">Landline Number</string>
    <string name="Image_title">Image title</string>
    <string name="No._working_days">No. working days</string>
    <string name="Trader">Trader</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Professional">Professional</string>
    <string name="Service_Provider">Service Provider</string>
    <string name="Advertiser_Type">Advertiser Type</string>
    <string name="Basic">Basic</string>
    <string name="Premium">Premium</string>
    <string name="Superlisting">Superlisting</string>
    <string name="First_name">First Name</string>
    <string name="Last_name"> Last Name</string>
    <string-array name="Chapter">
        <item>Select Chapter</item>
    </string-array>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="internet_error">Something went wrong</string>
    <string name="social_text">The most important objective at Agrawal Federation is to be the most powerful community

In the next few weeks we would like to have a brain-storming session for defining next level of activities to be undertaken by Agrawal Federation

I would like to call them as combination of a Machine and a Missile for their Vision, Strategy and its effective Execution

First and foremost, I would like to convey my personal thanks to all of you for giving me the opportunity to once again SERVE the COMMUNITY.

</string>
    <string name="Social_News">Social News</string>
    <string-array name="module">
        <item>"Medical"</item>
        <item>"Matrimony"</item>
        <item>"Business"</item>
        <item>"Education"</item>
        <item>"Social Reform"</item>
    </string-array>
    <string name="DetailsFieldSearchResult">meeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeFounded by JamunaLal Balaram Agrawal in 1952, the Leela Group is a nationwide enterprise, headquartered at Pune comprising over 20 independent operating companies. </string>
    <string name="AddressFieldSearchResult">Office No. 75 to 78, A Wing, Fourth Floor, K K Market, Dhankawadi,, Pune, KK Market, Balaji Nagar, Pune, Maharashtra 411043</string>
    <string name="time"> 8AM - 6PM</string>
    <string name="phone">9158289285</string>
    <string name="email">LeelaGlobalInfotech@gmail.com</string>
    <string name="layoutTab">TabHostExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string-array name="location">
        <item>Pune</item>
        <item>Delhi</item>
        <item>Mumbai</item>
    </string-array>
    <string-array name="search_type">
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Medical</item>
    </string-array>
    <string-array name="titleEvent">
        <item>Rock Consert</item>
        <item>DanceDiva</item>
    </string-array>
    <string-array name="event_date">
        <item>10/10/2017</item>
        <item>10/10/2017</item>
        <item>10/10/2017</item>
    </string-array>
    <string-array name="event_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
    </string-array>
    <string-array name="event_time">
        <item>10am</item>
        <item>11am</item>
        <item>12am</item>
    </string-array>
    <string-array name="event_location">
        <item>kotharud</item>
        <item>kkmarket</item>
        <item>KarveRoad</item>
    </string-array>
    <string-array name="event_entryCharge">
        <item>300</item>
        <item>400</item>
        <item>76000</item>
    </string-array>
    <string name="cast">Cast</string>
    <string name="person">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="Designation">Designation</string>
    <string name="Website">www.agrawalfederation.in</string>
    <string name="fnameerror">Enter a valid first name</string>
    <string name="mnameerror">Enter a valid Middle name</string>
    <string name="lnameerror">Enter a valid last name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">Enter a valid password</string>
    <string name="confirmpasserror">Enter a valid confirmpassword</string>
    <string name="err_msg_Qualification">Qualification</string>
    <string name="err_msg_aboutBusiness">BusinessInfo</string>
    <string name="err_msg_business_name">BusinessName</string>
    <string name="err_msg_addresss">BusinessAddress</string>
    <string name="err_msg_contact">BusinessContact</string>
    <string name="err_msg_emailId">BusinessWebsite</string>
    <string name="err_msg_city_pincode">Pincode</string>
    <string-array name="Posting_country">
        <item>Selected Country </item>
        <item>India</item>
        <item> Afghanistan</item>
        <item> Albania</item>
        <item> Algeria</item>
        <item>  Andorra</item>
        <item> Angola</item>
        <item> Anguilla</item>
        <item> Antigua and Barbuda.</item>
        <item> Argentina.</item>

    </string-array>
    <string-array name="Posting_state">
        <item>Selected State </item>
        <item>Kerala  </item>
        <item>  Madhya Pradesh  </item>
        <item> Maharashtra </item>
        <item>  Manipur </item>
        <item>  Meghalaya  </item>
        <item> Mizoram  </item>
        <item> Nagaland </item>
        <item> Orissa </item>
        <item> Punjab  </item>
        <item> Rajasthan  </item>
        <item> Sikkim  </item>
        <item>  Tamil Nadu  </item>
        <item> Tripura  </item>

    </string-array>
    <string-array name="Posting_city">
        <item>Selected_city </item>
        <item> Mumbai</item>
        <item>Pune</item>
        <item>Nagpur</item>
        <item>Nashik</item>
        <item>Vasai-Virar</item>
        <item>Palghar</item>
        <item> Aurangabad</item>
        <item>Solapur</item>
    </string-array>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_first_name">Enter your first name</string>
    <string name="err_msg_last_name">Enter your last name</string>
    <string name="err_msg_father_name">Enter your father name</string>
    <string name="err_msg_mother_name">Enter your mother name</string>
    <string name="err_msg_mobile">Enter valid 10 digit mobile number</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="err_msg_pincode">PinCode must be 6 digit</string>
    <string name="err_msg_dob">Enter your date of birth</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Password at least 6 digit in length</string>
    <string name="err_msg_cpassword">Enter the similar password</string>
    <string name="term">I, hereby, declare that all statements and entries made in this application form are true, complete and correct to the best of my knowledge and belief. I understand that in the event of any information being found false or ineligibility being detected any time, action can be taken against me by Management. I, confirm that I will follow all the rules and regulations prescribed by AF Administrative Training Foundation and in case of any violation of any of the rules and misconduct, management would have absolute right to take disciplinary action against me. I, confirm that all decision will be final by AF Academic committee in case of any dispute</string>
    <string-array name="Board_array">
        <item> MAHARASHTRA BOARD </item>
        <item> Delhi BOARD </item>
        <item> KERLA BOARD </item>
        <item> KARNATAKA BOARD </item>
    </string-array>
    <string-array name="University_array">
        <item> PUNE UNIVERSITY </item>
        <item> MUMBAI UNIVERSITY </item>
        <item> SHIVAJI UNIVERSITY </item>
    </string-array>
    <string name="Year">Year</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text</string>
    <string name="about_us_Concept">Concept :</string>
    <string name="about_us_ourConcept">Our Concept</string>
    <string name="about_us_need">Need :</string>
    <string name="about_us_ourneed">Our Need</string>
    <string name="first_name">First Name</string>
    <string name="mid_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_next">Next</string>
    <string name="WhereDidYouHearUs">Where Did You Hear Us</string>
    <string name="ProfileCreatedBy">Profile Created By</string>
    <string name="Reading">Reading</string>
    <string name="Dancing">Dancing</string>
    <string name="Playing">Playing</string>
    <string name="ListingSongs">Listing Songs</string>
    <string name="OtherHobbies">Other Hobbies</string>
    <string name="Interests">Interests</string>
    <string name="Password">Password</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="Register">Register</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Hobbies">Hobbies</string>
</resources>