<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_matrimony_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.LeelaGroup.AgrawalFedration.matrimony.MatrimonyRegistration">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <LinearLayout
                android:layout_margin="@dimen/layout_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:textSize="@dimen/text_size"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_bottom_margin">

                    <EditText
                        android:id="@+id/midname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mid_name"
                        android:textSize="@dimen/text_size"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
             >

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:textSize="@dimen/text_size"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   >

                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:textSize="@dimen/text_size"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
>

                    <EditText
                        android:id="@+id/num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ContactNumber"
                        android:inputType="number"
                        android:textSize="@dimen/text_size"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   >

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:checked="true"
                            android:text="@string/Male"
                            android:textSize="@dimen/text_size" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/Female"
                            android:textSize="@dimen/text_size" />
                    </RadioGroup>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
>

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:textSize="@dimen/text_size"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_bottom_margin"
                    android:layout_marginBottom="@dimen/layout_bottom_margin"
>

                    <EditText
                        android:id="@+id/cnpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ConfirmPassword"
                        android:textSize="@dimen/text_size"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_Height"
                    android:layout_gravity="center"
                    android:background="@drawable/res_drawable_btn_flat_normal"
                    android:text="@string/Register"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/text_size"
                    android:layout_marginBottom="@dimen/formPartnerPref_button_margin_bottom"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
    </ScrollView>
</LinearLayout>
